--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -9608,7 +9608,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-image: url("../images/background.svg");
+  background-image: url("../../images/background.svg");
   background-size: cover;
   background-attachment: fixed;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -9616,7 +9616,7 @@ body {
   overflow: hidden;
 }
 
-.label {
+label {
   font-weight: 600;
 }
 
@@ -9637,11 +9637,15 @@ body {
 }
 
 .wrong {
-  border: 3px solid red;
+  border: 3px solid red !important;
+}
+
+.btn {
+  border-radius: 20px;
 }
 
 .correct {
-  border: 3px solid rgb(6, 240, 15);
+  border: 3px solid rgb(6, 240, 15) !important;
 }
 
 .question {
@@ -9656,6 +9660,12 @@ body {
   font-weight: 600;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .header {
   width: 100vw;
   height: 10vh;
@@ -9664,6 +9674,7 @@ body {
 .header-profile-picture {
   border-radius: 50%;
   width: 30px;
+  padding: 0;
 }
 
 .game {
@@ -9676,6 +9687,147 @@ body {
   top: 20px;
   z-index: 2;
   width: 16%;
+}
+
+.feedback {
+  height: 80vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 100px;
+}
+.feedback .feedback-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  width: 40%;
+  border-radius: 10px;
+  height: 50%;
+}
+.feedback .card {
+  width: 50%;
+  height: 0;
+  border: none;
+}
+.feedback .card .game-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 50%;
+  background-color: white;
+  width: 100%;
+  position: relative;
+}
+.feedback .card .game-header img {
+  position: absolute;
+  width: 180px;
+  left: 16%;
+  top: -180px;
+  box-shadow: rgb(42, 90, 247) 0px 1px 55px, rgb(65, 31, 255) 0px -2px 30px, rgb(44, 93, 255) 0px 2px 6px, rgb(100, 65, 255) 0px 2px 30px;
+}
+.feedback .card label, .feedback .card span {
+  opacity: 0%;
+  display: none;
+}
+.feedback .feedback_buttons {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.feedback .feedback_buttons .btn {
+  width: 20vw;
+  border-radius: 0;
+}
+.feedback .logo {
+  width: 8%;
+  position: absolute;
+  left: 46%;
+}
+.feedback .row > * {
+  padding-left: 0;
+  padding-right: 0;
+}
+.feedback h2 {
+  color: #8958A3;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.feedback .feedback-score {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.ranking {
+  height: 100vh;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+}
+.ranking .row {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.ranking .ranking-card {
+  min-width: 400px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  min-height: 400px;
+  border-radius: 20px;
+  position: relative;
+}
+.ranking .ranking-card .logo {
+  position: absolute;
+  top: -120px;
+  width: 150px;
+}
+.ranking .ranking-card .ranking-title {
+  margin-top: 60px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #771884;
+}
+.ranking .ranking-card .btn {
+  width: 250px;
+}
+.ranking .ranking-card .players {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  width: 100%;
+}
+.ranking .ranking-card .players .player-card {
+  background-color: #E1E5EB;
+  width: 100%;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.ranking .ranking-card .players .player-card .player-score {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  gap: 5px;
+  background-color: white;
+  padding: 10px 30px;
+  border-radius: 20px;
+  box-shadow: 0px 4px 22px rgba(0, 0, 0, 0.25);
 }
 
 @media screen and (max-width: 780px) {
