--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -63,7 +63,7 @@ label {
 
 
 .btn {
-  border-radius: 20px !important;
+  border-radius: 20px;
 }
 
 .correct {
@@ -209,6 +209,84 @@ label {
 }
 
 //end-feedback
+
+// ranking
+
+.ranking {
+  height: 100vh;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+
+  .row {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .ranking-card {
+    min-width: 400px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    min-height: 400px;
+    border-radius: 20px;
+    position: relative;
+
+    .logo {
+      position: absolute;
+      top: -120px;
+      width: 150px;
+    }
+
+    .ranking-title {
+      margin-top: 60px;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: map-get($map: $theme-purple, $key: 300);
+    }
+
+    .btn {
+      width: 250px;
+    }
+
+    .players {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 10px;
+      width: 100%;
+
+      .player-card {
+        background-color: map-get($map: $gray-scale, $key: 50);
+        width: 100%;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .player-score {
+          display: flex;
+          height: 100%;
+          align-items: center;
+          gap: 5px;
+          background-color: white;
+          padding: 10px 30px;
+          border-radius: 20px;
+          box-shadow: 0px 4px 22px rgba(0, 0, 0, 0.25);
+        }
+      }
+    }
+  }
+}
+
+//end ranking
+
 
 
 @media screen and (max-width: 780px) {
